fixing btn-navbar align and bump version number

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -1499,6 +1499,7 @@ ul[class*="newsfeed"]{
 		}
 	}
 	.btn-navbar{
+		margin-top: 6px;
 		padding: 7px 10px !important;
 		&:hover{
 			background-color: @btnNavbarBackground !important;
